--- a/login_register/login/style/style.css
+++ b/login_register/login/style/style.css
@@ -12,7 +12,7 @@ body {
   justify-content: center;
   height: 100vh;
   padding: 15px;
-  background: #1abc9c;
+  background: #e74c3c;
   overflow: hidden;
 }
 .wrapper {
@@ -24,7 +24,7 @@ body {
 }
 .wrapper .title {
   height: 120px;
-  background: #16a085;
+  background: #c0392b;
   border-radius: 5px 5px 0 0;
   color: #fff;
   font-size: 30px;
@@ -52,7 +52,7 @@ body {
   transition: all 0.3s ease;
 }
 form .row input:focus {
-  border-color: #16a085;
+  border-color: #c0392b;
 }
 form .row input::placeholder {
   color: #999;
@@ -63,8 +63,8 @@ form .row input::placeholder {
   height: 100%;
   color: #fff;
   font-size: 22px;
-  background: #16a085;
-  border: 1px solid #16a085;
+  background: #c0392b;
+  border: 1px solid #c0392b;
   border-radius: 5px 0 0 5px;
   display: flex;
   align-items: center;
@@ -74,7 +74,7 @@ form .row input::placeholder {
   margin-top: 12px;
 }
 .wrapper form .pass a {
-  color: #16a085;
+  color: #c0392b;
   font-size: 17px;
   text-decoration: none;
 }
@@ -87,12 +87,12 @@ form .row input::placeholder {
   font-size: 20px;
   font-weight: 500;
   padding-left: 0px;
-  background: #16a085;
-  border: 1px solid #16a085;
+  background: #c0392b;
+  border: 1px solid #c0392b;
   cursor: pointer;
 }
 form .button input:hover {
-  background: #12876f;
+  background: #a93226;
 }
 .wrapper form .signup-link {
   text-align: center;
@@ -100,7 +100,7 @@ form .button input:hover {
   font-size: 17px;
 }
 .wrapper form .signup-link a {
-  color: #16a085;
+  color: #c0392b;
   text-decoration: none;
 }
 form .signup-link a:hover {
